--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.5.0",
     "jotai": "^2.12.2",
     "lucide-react": "^0.483.0",
@@ -19,7 +20,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "react-router-dom": "^7.4.0"
+    "react-router-dom": "^7.4.0",
+    "uglify-js": "^3.19.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -30,6 +32,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "react-error-overlay": "^6.0.9",
     "tailwindcss": "^4.0.14",
     "vite": "^6.2.0"
   }
